<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/alertdialog_bg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/ss_font"
                android:text="@string/serviceAgreement1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/ss_font"
                android:text="@string/serviceAgreement2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/ss_font"
                android:text="@string/serviceAgreement3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/ss_font"
                android:text="@string/serviceAgreement4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@color/ss_font"
                android:text="@string/serviceAgreement5"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
