<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context="com.huina.lzzie.citybus_express.fn.TjjjdzActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:onClick="goback"
                android:src="@mipmap/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/tjjjdz"
                android:textColor="#5e5f61" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:text="@string/mz"
                    android:textColor="@color/ss_font"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tj_jj_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/mz2"
                    android:textColor="@color/qs_font"
                    android:textColorHint="@color/qs_font"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#ededed" />

                <TextView
                    android:id="@+id/addressList"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/txl"
                    android:textColor="@color/font"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:text="@string/dh"
                    android:textColor="@color/ss_font"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tj_jj_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/dh2"
                    android:textColor="@color/qs_font"
                    android:textColorHint="@color/qs_font"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:text="@string/sf"
                    android:textColor="@color/ss_font"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tj_jj_sf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/sf2"
                    android:textColor="@color/qs_font"
                    android:textColorHint="@color/qs_font"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:text="@string/sq"
                    android:textColor="@color/ss_font"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tj_jj_sq"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/sq2"
                    android:textColor="@color/qs_font"
                    android:textColorHint="@color/qs_font"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:text="@string/xxdz"
                    android:textColor="@color/ss_font"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tj_jj_xxdz"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/xxdz2"
                    android:textColor="@color/qs_font"
                    android:textColorHint="@color/qs_font"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:text="@string/bc"
        android:id="@+id/tj_jj_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/login_button"/>
</LinearLayout>
