<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context="com.huina.lzzie.citybus_express.fn.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:onClick="goback"
            android:clickable="true"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#5e5f61"
            android:layout_marginRight="20dp"
            android:focusableInTouchMode="true"
            android:text="@string/login_head"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:gravity="center|left"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="12sp"
                android:maxLength="11"
                android:digits="1234567890"
                android:id="@+id/userName"
                android:hint="@string/login_name"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"

            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/pas"
                android:gravity="center|left"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="12sp"
                android:id="@+id/userPas"
                android:inputType="textPassword"
                android:hint="@string/login_pas"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cccccc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="9.5"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/bg_button_login_select"
                android:id="@+id/login"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/show_register"
                android:id="@+id/showRegister"
                android:textColor="@color/font"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/forget_pas"
                android:id="@+id/forgerPas"
                android:textColor="@color/font"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
