<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context="com.huina.lzzie.citybus_express.fn.ResetpasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:onClick="goback"
            android:clickable="true"
            android:id="@+id/imageView" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#5e5f61"
            android:layout_marginRight="20dp"
            android:focusableInTouchMode="true"
            android:text="@string/resetpas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/new_pas" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/new_pas2"
            android:id="@+id/resetPas"
            android:maxLength="11"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/new_pas" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_pas2"
            android:inputType="textPassword"
            android:id="@+id/resetPas2"
            android:maxLength="11"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.5"
            android:background="@drawable/bg_button_login_select"
            android:text="确认"
            android:id="@+id/resetConfirmButton"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>
